# alter-ego

./: .gitignore  README.md  chat_agent.py  chat_context.py  config.py  evaluation.py  notifier.py  pyproject.toml  tool_executor.py  tool_specs.py
me/: summary.txt
