[project]
name = "alter_ego"
version = "0.1.0"
description = "AI alter-ego chatbot that represents Piotr Lesiecki on his personal website"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.15.0",
    "openai>=1.68.2",
    "pypdf>=6.12.2",
    "pydantic>=2.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.15.14",
    "setuptools>=78.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "RUF", "ANN", "D"]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # __init__ docstring redundant when class has one
    "D203",   # Conflicts with D211
    "D213",   # Conflicts with D212
    "ANN101", # self type annotation not required
    "ANN102", # cls type annotation not required
    "ANN204", # __init__ return type is always None — obvious
    "T201",   # print() used for lightweight observability in this app
    "EM101",  # Exception string literals are fine at this scale
    "EM102",  # Same as EM101 for f-strings
    "TRY003", # Short exception messages are fine here
]
